# google-tasks-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcpbignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  MCP_SERVER_GUIDE.md  README.md  SECURITY.md  docker-compose.yml  google-tasks-mcp-specifications.md  manifest.json  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
deploy/caddy/: Caddyfile
deploy/systemd/: google-tasks-mcp.service
docs/: google-tasks-mcp-cache-architecture.md  implementation-plan.md
docs/evidence/: sqlite-tasklist-cache.md  step-0-foundation-utilities.md  step-14-multi-account-bearer-routing.md  step-15-oauth-reauthorize-loop.md  step-16-all-tasklists-read-views.md  step-17-tool-discoverability-metadata.md  step-18-readme-setup-clarity.md
docs/open-issues/: mcp-auth-reauthorize-loop.md  mcp-bug-default-tasklist.md
docs/planning/: enhancements.md
metadata/: glama.json
scripts/: bootstrap_oauth.py  create_bearer_token.py  set_refresh_token.py
src/google_tasks_mcp/: __init__.py  __main__.py  account.py  auth.py  config.py  db.py  digest.py  errors.py  http_app.py  resolver.py  server.py  tasks.py  timezones.py
src/google_tasks_mcp/scripts/: __init__.py  bootstrap_oauth.py  create_bearer_token.py  set_refresh_token.py
src/mcp_oauth_gateway/: README.md  __init__.py  config.py  endpoints.py  gateway.py  google_tasks_http_app.py  middleware.py  pyproject.toml  store.py  test_gateway.py
tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_digest.py  test_http_app.py  test_release_artifacts.py  test_resolver.py  test_scripts.py  test_tasks_wrapper.py  test_timezones.py  test_tools.py
