[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-tasks-mcp"
version = "0.2.0"
description = "A self-hosted MCP server for Google Tasks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mcp>=1.2.0",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
    "starlette>=0.40",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
google-tasks-mcp = "google_tasks_mcp.__main__:main"
google-tasks-mcp-bootstrap = "google_tasks_mcp.scripts.bootstrap_oauth:main"
google-tasks-mcp-set-refresh-token = "google_tasks_mcp.scripts.set_refresh_token:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
